--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,12 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:data.sql
+#spring.datasource.initialization-mode=always
+#spring.datasource.data=classpath:data.sql
 
 #spring.profiles.active = test
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/master.xml
+spring.liquibase.drop-first=false
 
