--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,7 +3,10 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=CONTACT
 spring.datasource.password=pwd123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/master.xml
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
